# demo_z8z

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: main.rs
src/z8z/: ciphertext.rs  homomorphic_key.rs  mod.rs  secret_key.rs  tests.rs
src/zqz/: ciphertext.rs  keys.rs  max.rs  mod.rs  tests.rs  utils.rs
