[package]
name = "demo_z8z"
version = "0.1.0"
authors = ["D. Ligier", "J.B. Orfila", "S. Tap", "Zama team"]
license = "AGPL-3.0"
description = "Demo using Concrete library to implement exact homomorphic computation with 3-bit integers."
homepage = "https://crates.io/crates/concrete_lib"
documentation = "https://concrete.zama.ai"
repository = "https://github.com/zama-ai/demo_z8z"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
z8z-ks=[]
z16z-ks=[]

[dependencies]
concrete="0.1.11"
colored="2.0.0"
concrete-core="0.1.10"
